|                                                                 |
|         - AWStats:                                              |
|               * apache: set statsdir if awstats is enabled      |
|               * gui: disable stats-alias in client menu         |
\_________________________________________________________________/

2007-06-21 Raphael Geissert
	- INSTALLATION:
		* Fixed #407: Initialization vector must be exactly 8 bytes long when using the Blowfish cipher
	- ENGINE:
		* Separated methods from ispcp_common_code.pl in ispcp_common_methods.pl
		* Added VHCS 2.4.7.1 to ispCP Omega migration script

2007-06-20 Benedikt Heintel
	- GUI:
		* Reorganized input check functions
	- ENGINE:
		* Further AWStats integration

2007-06-20 Raphael Geissert
	- GUI:
		* Fixed #418: ERROR: The php-extension 'mcrypt' not loaded!

2007-06-19 Raphael Geissert
	- INSTALLATION:
		* Fixed #410: Undefined subroutine &main::get_file called
	- GUI:
		* Improved security and removed redundant stuff
		* Fixed #403: Can't remove Mysql database

2007-06-18 Raphael Geissert
	- INSTALLATION:
		* Fixed #407: Initialization vector must be exactly 8 bytes long when using the Blowfish cipher
	- DOCS:
		* Removed libnet-perl from Ubuntu fesity's packages list
	- GUI:
		* Fixed #408: Typo in i18n.php and object to string conversion
		* Improved tr() function

2007-06-17 Raphael Geissert
	- INSTALLATION:
		* Replaced gen-keys.c with perl-only code
	- SETUP:
		* PMA's blowfish key generator replaced with new one
	- ENGINE:
		* Added save_file and gen_sys_rand_num

2007-06-17 Benedikt Heintel
	- CONFIGS:
		* Fixed: FastCGI config missing </IfModule>
	- GUI:
		* Fixed #405: reload.gif instead of reload.png
	- SETUP:
		* Fixed: error on install; PHP Version was not asked
		* Partly fixed #404: new makefile errors

2007-06-16 Raphael Geissert
	- GUI:
		* Fixed #197: Link to user's domain
		* Replaced some icons with new ones